	Fixed bug where the formatter would apply inline formatting outside the current word in if the selection was collapsed.
	Fixed bug where it wasn't possible to delete tables on Chrome if you placed the selection within all the contents of the table.
	Fixed bug where older IE versions wouldn't properly insert contents into table cells when editor focus was lost.
	Fixed so pagebreak elements in the editor breaks pages when printing. Patch contributed by penc.
	Fixed so UndoManager events pass though the original event that created the undo level such as a keydown, blur etc.
	Fixed bug where the image dialog would get stuck if the src was removed. Patch contribued by monkeydiane.
	Fixed bug where there is an extra br tag for IE 9/10 that isn't needed. Patch contributed by monkeydiane.
	Fixed bug where drag/drop in a scrolled editor would fail since it didn't use clientX/clientY cordinates. Patch contributed by annettem.
Version 4.0.16 (2014-01-31)
	Fixed bug where the editor wouldn't be properly rendered on IE 10 depending on the document.readyState.
Version 4.0.15 (2014-01-31)
	Fixed bug where paste in inline mode would produce an exception if the contents was pasted inside non overflow element.
Version 4.0.14 (2014-01-30)
	Fixed a bug in the image plugin where images couldn't be inserted if the image_advtab option wasn't set to true.
Version 4.0.13 (2014-01-30)
	Added language selection menu to spellchecker button similar to the 3.x functionality. Patch contributed by threebytesfull.
	Added new style_formats_merge option that enables you to append to the default formats instead of replaceing them. Patch contributed by PacificMorrowind.
	Fixed bug where the DOMUtils getPos API function didn't properly handle the location of the root element. Patch contributed by Andrew Ozz.
	Fixed bug where the spellchecker wouldn't properly place the spellchecker suggestions menu. Patch contributed by Andrew Ozz.